[package]
name = "blort"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
sqlx = { version = "0.8.6", features = ["chrono", "uuid", "tls-rustls", "postgres", "runtime-tokio", "macros", "migrate"] }
tokio = { version = "1.28.2", features = ["full"] }
dotenvy = "0.15"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
